WIP: save current workspace state